<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:paddingBottom="@dimen/activity_vertical_margin"
 	android:paddingLeft="@dimen/activity_horizontal_margin"
 	android:paddingRight="@dimen/activity_horizontal_margin"
 	android:paddingTop="@dimen/activity_vertical_margin"
 	android:orientation="vertical"
    tools:context=".CreatePatient" >

    <TextView 
        android:id="@+id/registerPatientTextView" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/create_patient"/>
    
    <EditText android:id="@+id/register_fname_field"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:hint="@string/register_fname">
 	</EditText> 
 	
    <EditText android:id="@+id/register_lname_field"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:hint="@string/register_lname">
 	</EditText>  
 
 
 	<EditText android:id="@+id/register_dob_field"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:hint="@string/register_dob" />
 	
 	<EditText android:id="@+id/register_hcard_field"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:hint="@string/register_hcard" />
 	
 	<View
  		android:layout_width="1dp"
  		android:layout_height="50dp">
	</View>
	
 	<Button
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:text="@string/register"
 		android:onClick="createNewPatient" />

</LinearLayout>
