<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:paddingBottom="@dimen/activity_vertical_margin"
 	android:paddingLeft="@dimen/activity_horizontal_margin"
 	android:paddingRight="@dimen/activity_horizontal_margin"
 	android:paddingTop="@dimen/activity_vertical_margin"
 	android:orientation="vertical"
    tools:context=".LoginNurse"
    android:focusable="true"
 	android:focusableInTouchMode="true" >

    <TextView 
        android:id="@+id/loginNurseTextView" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/login_nurse"/>
    
    <EditText android:id="@+id/login_username_field"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:hint="@string/login_username" >
 		<requestFocus></requestFocus>
 	</EditText> 
 
 	<EditText android:id="@+id/login_password_field"
 	    android:inputType="textPassword"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:hint="@string/login_password" />
 	
 	<View
  		android:layout_width="1dp"
  		android:layout_height="50dp">
	</View>
	
 	<Button
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:text="@string/log_in_nurse"
 		android:onClick="checkLoginNurse" />
 	
 	<Button
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:text="@string/log_in_doctor"
 		android:onClick="checkLoginDoctor" />
    
    
</LinearLayout>
