<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:paddingBottom="@dimen/activity_vertical_margin"
 	android:paddingLeft="@dimen/activity_horizontal_margin"
 	android:paddingRight="@dimen/activity_horizontal_margin"
 	android:paddingTop="@dimen/activity_vertical_margin"
 	android:orientation="vertical"
    tools:context=".UpdatePerscription" >

    <TextView 
        android:id="@+id/updatePerscriptionTextView" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/update_perscription"/>
    
    <EditText android:id="@+id/update_medication"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:hint="@string/update_medicine" /> 
 		
     <EditText android:id="@+id/update_instruction"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:hint="@string/update_medi_instruction" />
 	
 	<View
  		android:layout_width="1dp"
  		android:layout_height="50dp">
	</View>

 	<Button
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:onClick="updatePerscription"
 	    android:text="@string/add_new_perscription" />
    
</LinearLayout>