<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:paddingBottom="@dimen/activity_vertical_margin"
 	android:paddingLeft="@dimen/activity_horizontal_margin"
 	android:paddingRight="@dimen/activity_horizontal_margin"
 	android:paddingTop="@dimen/activity_vertical_margin"
 	android:orientation="vertical"
    tools:context=".RegisterDoctor"
    android:focusable="true"
 	android:focusableInTouchMode="true" >

    <TextView 
        android:id="@+id/registerDoctorTextView" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/register_doctor"/>
    
    <EditText android:id="@+id/register_username_field"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:hint="@string/register_username">
 		<requestFocus></requestFocus>
 	</EditText>  
 
 	<EditText android:id="@+id/register_password_field"
 	    android:inputType="textPassword"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:hint="@string/register_password" />
 	
 	<View
  		android:layout_width="1dp"
  		android:layout_height="50dp">
	</View>
	
 	<Button
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:text="@string/register"
 		android:onClick="registerLogin" />
    
    
</LinearLayout>
