<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:orientation="vertical"
	tools:context=".MainActivity" 
	android:background="#0090c0"> 

        <View
  		android:layout_width="1dp"
  		android:layout_height="80dp">
		</View>

		<ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
	
		<View
  			android:layout_width="1dp"
  			android:layout_height="80dp">
		</View>
	
	<Button
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:text="@string/login_existing"
 		android:onClick="loginNurse"
 		android:textColor="@android:color/white" />
	
	<Button
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:text="@string/login_register_nurse"
 		android:onClick="registerNurse" 
 		android:textColor="@android:color/white"/>
	
	<Button
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:text="@string/login_register_doctor"
 		android:onClick="registerDoctor" 
 		android:textColor="@android:color/white"/>

</LinearLayout>
